# cmake-workshop

content/code/day-1/00_hello-cxx/: CMakeLists.txt
content/code/day-1/01_libraries-cxx/: CMakeLists.txt
content/code/day-1/02_conditionals-cxx/: CMakeLists.txt
content/code/day-1/03_loops-cxx/: CMakeLists.txt
